# whynotincpp

./: CMakeLists.txt  README.md
source/helpers/: helpers.cpp  helpers.hpp
tests/: acutest.h  helper_tests.cpp
